--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "animalface",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:8080",
+  
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -40,7 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-
-  "proxy" : "http://localhost:5000"
+  }
 }
