--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,14 @@
   "name": "animalface",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8080",
-  
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animalface": "file:..",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "randomcolor": "^0.6.2",
