--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/BenX-64/animalface#readme",
   "dependencies": {
     "concurrently": "^6.5.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "formidable": "^2.0.1",
     "multer": "^1.4.4"
